MessagePass/cmake-build-debug/CMakeFiles/clion-log.txt
C:\Windows\system32\wsl.exe --distribution Ubuntu --exec /usr/bin/zsh -c "export CMAKE_COLOR_DIAGNOSTICS=ON && export CLION_IDE=TRUE && export JETBRAINS_IDE=TRUE && cd /home/rjzhb/Project/NoLockCoding/MessagePass/cmake-build-debug && /usr/bin/cmake -DCMAKE_BUILD_TYPE=Debug -G 'CodeBlocks - Unix Makefiles' -S /home/rjzhb/Project/NoLockCoding/MessagePass -B /home/rjzhb/Project/NoLockCoding/MessagePass/cmake-build-debug"
-- The C compiler identification is unknown
-- The CXX compiler identification is GNU 11.1.0
-- Check for working C compiler: /usr/bin/cc
-- Check for working C compiler: /usr/bin/cc -- broken
CMake Error at /usr/share/cmake-3.16/Modules/CMakeTestCCompiler.cmake:60 (message):
  The C compiler

    "/usr/bin/cc"

  is not able to compile a simple test program.

  It fails with the following output:

    Change Dir: /home/rjzhb/Project/NoLockCoding/MessagePass/cmake-build-debug/CMakeFiles/CMakeTmp
    
    Run Build Command(s):/usr/bin/make cmTC_4805c/fast && /usr/bin/make -f CMakeFiles/cmTC_4805c.dir/build.make CMakeFiles/cmTC_4805c.dir/build
    make[1]: Entering directory '/home/rjzhb/Project/NoLockCoding/MessagePass/cmake-build-debug/CMakeFiles/CMakeTmp'
    Building C object CMakeFiles/cmTC_4805c.dir/testCCompiler.c.o
    /usr/bin/cc    -o CMakeFiles/cmTC_4805c.dir/testCCompiler.c.o   -c /home/rjzhb/Project/NoLockCoding/MessagePass/cmake-build-debug/CMakeFiles/CMakeTmp/testCCompiler.c
    /home/rjzhb/Project/NoLockCoding/MessagePass/cmake-build-debug/CMakeFiles/CMakeTmp/testCCompiler.c:2:3: error: #error "The CMAKE_C_COMPILER is set to a C++ compiler"
        2 | # error "The CMAKE_C_COMPILER is set to a C++ compiler"
          |   ^~~~~
    make[1]: *** [CMakeFiles/cmTC_4805c.dir/build.make:66: CMakeFiles/cmTC_4805c.dir/testCCompiler.c.o] Error 1
    make[1]: Leaving directory '/home/rjzhb/Project/NoLockCoding/MessagePass/cmake-build-debug/CMakeFiles/CMakeTmp'
    make: *** [Makefile:121: cmTC_4805c/fast] Error 2
    
    

  

  CMake will not be able to correctly generate this project.
Call Stack (most recent call first):
  CMakeLists.txt:2 (project)


-- Configuring incomplete, errors occurred!
See also "/home/rjzhb/Project/NoLockCoding/MessagePass/cmake-build-debug/CMakeFiles/CMakeOutput.log".
See also "/home/rjzhb/Project/NoLockCoding/MessagePass/cmake-build-debug/CMakeFiles/CMakeError.log".
